--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LH Games</title>
+  <title>RH Senai Games</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="css/style.css">
 
 
 
@@ -36,7 +36,7 @@
               <a class="nav-link" href="#">Jogos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html">>>Login<<</a>
+              <button class="nav-link login" href="login.html">Login</button>
             </li>
 
 
@@ -52,13 +52,14 @@
 
   <main>
 
-
-
     <section id="section-banners" class="container-fluid">
 
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <div class="carousel-item">
+              <img src="img/banner4.PNG" class="d-block w-100" alt="Várias novidades em Produtos">
+            </div>
             <img src="img/banner1.PNG" class="d-block w-100" alt="Venha comprar em nossa loja!">
           </div>
           <div class="carousel-item">
@@ -79,34 +80,46 @@
       </div>
 
     </section>
-    <section id="section-vendidos" class="container-fluid">
 
-      <h2>OS MAIS VENDIDOS</h2>
-<div class="card-group">
-      <div class="card" style="width: 18rem;">
+    <section id="section-vendidos" class="container-fluid">
+      <h2 class="titulo">OS MAIS VENDIDOS</h2>
+    
+      <div class="card-group">
+
+      <div class="card">
+        <img src="img/jogo3.PNG" class="card-img-top" alt="Jogo de aventura">
+        <div class="card-body">
+          <h5 class="card-title">God Of War</h5>
+          <p class="card-text">Melhor de todos</p>
+          <p class="preço">R$ 150,00</p>
+          <a href="#" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
+
+      <div class="card">
         <img src="img/jogo1.PNG" class="card-img-top" alt="Jogo de aventura">
         <div class="card-body">
-          <h5 class="card-title">Jogo 1</h5>
+          <h5 class="card-title">Minecraft</h5>
           <p class="card-text">Jogo do ano</p>
           <p class="preço">R$ 190,00</p>
           <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img src="img/jogo2.PNG" class="card-img-top" alt="Jogo de corrida">
         <div class="card-body">
-          <h5 class="card-title">Jogo 2</h5>
+          <h5 class="card-title">Resident Evil Village</h5>
           <p class="card-text">Jogo Top de Linha</p>
           <p class="preço">R$ 290,00</p>
           <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
-        <img src="img/jogo3.PNG" class="card-img-top" alt="Jogo de aventura">
+      <div class="card">
+        <img src="img/jogo4.PNG" class="card-img-top" alt="Jogo de aventura">
         <div class="card-body">
-          <h5 class="card-title">Jogo 3</h5>
+          <h5 class="card-title">Forza Horizon 5</h5>
           <p class="card-text">Melhor de todos</p>
           <p class="preço">R$ 150,00</p>
           <a href="#" class="btn btn-primary">Comprar</a>
@@ -121,7 +134,7 @@
   </main>
 
   <footer>
-    <p>Desenvolvido po LH Games</p>
+    <p>RH Senai Games</p>
   </footer>
 
   <button id="voltar-topo" type="button" class="btn btn-outline-primary" onclick="topo()">&uarr; Voltar ao topo</button>
